# MY-astroshuter-on-SDL

./: .gitignore  CMakeLists.txt  README-ru.md  README.md  codeTester.cppcheck  create-data-file.bat  create-data-file.sh
idea/: astroshuter.py  template.py
img/HUD development/: Кнопка.pdn
src/: audio.cpp  audio.hpp  baseHud.cpp  baseHud.hpp  dataCreater.cpp  dataLoader.cpp  dataLoader.hpp  define.hpp  entity.cpp  entity.hpp  images.cpp  images.hpp  include.hpp  init.cpp  init.hpp  initFile.cpp  initFile.hpp  main.cpp  main.hpp  pause.cpp  pause.hpp  structs.hpp
